# openwps

./: .dockerignore  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.worker.json  vite.config.ts  你好-6641f13b-2a89-4ce5-ad02-6e9db29e61d6.json
docs/: CONTENT_ENGINEERING_COMPARISON.md  DOCKER.md  NATIVE_SOFTWARE_PLAN.md  PRETEXT.md  TOOL_HARNESS_TIMELINE.md
native/: Cargo.toml
native/crates/ai-bridge/: Cargo.toml
native/crates/app-shell/: Cargo.toml
native/crates/app-shell/src/: lib.rs  main.rs
native/crates/document-core/: Cargo.toml
native/crates/document-core/src/: ast.rs  command.rs  error.rs  lib.rs  selector.rs  style.rs  transaction.rs
native/crates/docx-interop/: Cargo.toml
native/crates/editor-runtime/: Cargo.toml
native/crates/editor-runtime/src/: lib.rs
native/crates/layout-engine/: Cargo.toml
native/crates/layout-engine/src/: lib.rs
native/crates/native-storage/: Cargo.toml
native/crates/native-storage/src/: lib.rs
native/crates/renderer-skia/: Cargo.toml
native/crates/renderer-skia/src/: lib.rs
native/specs/: 01-document-model.md  02-command-protocol.md
scripts/: deploy.sh  doc-ai-cli.mjs  run-tests.py  test-ai-copilot.cjs  test-ai-text-search-style.cjs  test-block-controls.cjs  test-comment-dialog.cjs  test-docx-toc.cjs  test-markdown-import.cjs  test-table-boundary-delete.cjs  test-table-layout.cjs  test-task-list.cjs  test-tool-harness.cjs  test-toolbar-overlap.cjs  test-typography.cjs
server/: __init__.py  index.ts  main.py  (+1 more)
(+96 files in other folders)
