[workspace]
resolver = "2"
members = [
    "crates/document-core",
    "crates/layout-engine",
    "crates/renderer-skia",
    "crates/editor-runtime",
    "crates/app-shell",
    "crates/docx-interop",
    "crates/ai-bridge",
    "crates/native-storage",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
winit = "0.30"
softbuffer = "0.4"
tiny-skia = "0.11"
font8x8 = "0.3"
