[package]
name = "app-shell"
version.workspace = true
edition.workspace = true

[dependencies]
editor-runtime = { path = "../editor-runtime" }
ai-bridge = { path = "../ai-bridge" }
native-storage = { path = "../native-storage" }
document-core = { path = "../document-core" }
winit = { workspace = true }
softbuffer = { workspace = true }
